# code-review-agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: review.yml
app/: main.py
app/static/: index.html
benchmark/: real_world.py  results.json  run_benchmark.py
examples/: vulnerable.py
src/: user_service.py
src/reviewagent/: __init__.py  cli.py  graph.py  parsing.py
src/reviewagent/analyzers/: __init__.py  api_contract.py  complexity.py  security.py
tests/: test_pipeline.py
